--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Vegetable Lasagna</h1>
+    <img src="/recipes/veggielasagna.jpeg" alt="Veggie Lasagna">
+    <h3>Description</h3>
+    <p>Delicious lasagna with vegetable filling that serves 12. About 466 calories per serving.</p>
 </body>
 </html>
