--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <title>Lasagna Sauce</title>
 </head>
 <body>
-    <h1>Vegetable Lasagna</h1>
+    <h1>Lasagna Sauce</h1>
     <img src="/recipes/veggielasagna.jpeg" alt="Veggie Lasagna">
     <h3>Description</h3>
-    <p>Delicious lasagna with vegetable filling that serves 12. About 466 calories per serving.</p>
+    <p>Delicious lasagna sauce that I often pair with my veggie lasgna recipe.</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>1/4 cup olive oil</li>
+        <li>1 onion, chopped</li>
+        <li>1 bay leaf</li>
+        <li>2 cloves garlic, chopped</li>
+        <li>2 teaspoons dried oregano</li>
+        <li>2 teaspoons dried basil</li>
+        <li>1 (14.5 ounce) can crushed tomatoes</li>
+        <li>1 (29 ounce) can diced tomatoes</li>
+        <li>1 pinch ground cinnamon</li>
+        <li>1 (16 ounce) package lasagna noodles</li>
+    </ul>
 </body>
 </html>
