--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -24,5 +24,14 @@
         <li>1 pinch ground cinnamon</li>
         <li>1 (16 ounce) package lasagna noodles</li>
     </ul>
+    <h4></h4>
+    <ol>
+        <li>Heat 1/4 cup oil in large skillet over medium heat</li>
+        <li>Stir in the chopped onions and bay leaf; cook and stir until the onion has softened and turned translucent, takes about 5 minutes.</li>
+        <li>Add 2 cloves minced garlic, oregano and 2 teaspoons basil; cook and stir for 2 more minutes.</li>
+        <li>Mix in undrained crushed tomatoes and diced tomatoes.</li>
+        <li>Bring to a boil, reduce heat, and simmer for 1 hour.</li>
+        <li>Finally, stir in cinnamon and done.</li>
+    </ol>
 </body>
 </html>
