--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -31,7 +31,7 @@
         <li>Add 2 cloves minced garlic, oregano and 2 teaspoons basil; cook and stir for 2 more minutes.</li>
         <li>Mix in undrained crushed tomatoes and diced tomatoes.</li>
         <li>Bring to a boil, reduce heat, and simmer for 1 hour.</li>
-        <li>Finally, stir in cinnamon and done.</li>
+        <li>Finally, stir in cinnamon and you're done!</li>
     </ol>
 </body>
 </html>
