--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lasagna Sauce</h1>
-    <img src="/recipes/veggielasagna.jpeg" alt="Veggie Lasagna">
+    <img src="../recipes/italian-tomato-sauce_featured.jpg" alt="Veggie Lasagna">
     <h3>Description</h3>
     <p>Delicious lasagna sauce that I often pair with my veggie lasgna recipe.</p>
     <h4>Ingredients</h4>
