--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/lasagna.html">Vegetable Lasagna</a>
+    <ul>
+        <a href="/recipes/lasagna.html">Vegetable Lasagna</a>
+        <a href="/recipes/pbandj.html">Peanut Butter and Jelly</a>
+        <a href="/recipes/quesadilla.html">Quesadilla</a>
+    </ul>
 </body>
 </html>
