--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -24,7 +24,7 @@
         <li>1 pinch ground cinnamon</li>
         <li>1 (16 ounce) package lasagna noodles</li>
     </ul>
-    <h4></h4>
+    <h4>Steps</h4>
     <ol>
         <li>Heat 1/4 cup oil in large skillet over medium heat</li>
         <li>Stir in the chopped onions and bay leaf; cook and stir until the onion has softened and turned translucent, takes about 5 minutes.</li>
