--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <title>Odin Project Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <a href="/recipes/lasagna.html">Vegetable Lasagna</a>
-        <a href="/recipes/pbandj.html">Peanut Butter and Jelly</a>
-        <a href="/recipes/quesadilla.html">Quesadilla</a>
-    </ul>
+    <h1>Recipes</h1>
+        <p><a href="../odin-recipes/recipes/lasagna.html">Lasagna Sauce</a></p>
+        <p><a href="../odin-recipes/recipes/pbandj.html">Peanut Butter and Jelly</a></p>
+        <p><a href="../odin-recipes/recipes/quesadilla.html">Quesadilla</a></p>
 </body>
 </html>
